--- a/.gitignore
+++ b/.gitignore
@@ -166,7 +166,7 @@ dmypy.json
 # .idea/artifacts
 # .idea/compiler.xml
 # .idea/modules.xml
-# .idea/*.iml
+.idea/*.iml
 # .idea/modules
 # *.iml
 # *.ipr
